syntax = "proto3";

package market;

service MarketApi {
    rpc GetAll (Empty) returns (Markets) {}
    rpc Create (Market) returns (Market) {}
}

message Empty { }

message Market {
    string id = 1;
    string short_name = 2;
    string full_name = 3;
    optional uint32 opens_from = 4;
    optional uint32 opens_till = 5;
    optional string open_time = 6;
    optional string close_time = 7;
    optional uint32 pre_market_offset = 8;
    optional uint32 post_market_offset = 9;
    optional string time_zone_offset = 10;
}

message Markets {
    repeated Market markets = 1;
}
